--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -81,6 +81,7 @@ const services = [
         <div
         class=" w-full  max-w-full flex-shrink px-4 sm:w-1/2 lg:w-1/3 lg:px-6"
         data-aos="fade-up"
+        data-aos-delay="100"
         style="visibility: visible;"
       >
         <!-- service block -->
