--- a/src/components/Step.astro
+++ b/src/components/Step.astro
@@ -3,22 +3,23 @@ const { title, icon, fadeDir } = Astro.props;
 ---
 
 <li>
-	<span
-		class="absolute -right-5 flex h-8 w-8 items-center justify-center rounded-full bg-lime-200 ring-4 ring-lime-50"
-	>
-		<i class={icon}></i>
-	</span>
-	<div
-		class="mb-10 mr-6"
-		data-aos={`fade-${fadeDir}`}
-		data-aos-duration="1000"
-		data-aos-delay="550"
-	>
-		<h3 class="mb-1 flex items-center text-2xl font-bold text-gray-900">
-			{title}
-		</h3>
-		<p class="mb-4 text-right text-xl font-normal text-gray-800">
-			<slot />
-		</p>
-	</div>
+  <span
+    class="absolute -right-5 flex h-8 w-8 items-center justify-center rounded-full bg-lime-200 ring-4 ring-lime-50"
+  >
+    <i class={icon}></i>
+  </span>
+  <div
+    class="mb-10 mr-6"
+    data-aos={`fade-${fadeDir}`}
+    data-aos-duration="1000"
+    data-aos-once="true"
+    data-aos-delay="550"
+  >
+    <h3 class="mb-1 flex items-center text-2xl font-bold text-gray-900">
+      {title}
+    </h3>
+    <p class="mb-4 text-right text-xl font-normal text-gray-800">
+      <slot />
+    </p>
+  </div>
 </li>
