--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -240,8 +240,12 @@ import Step from "../components/Step.astro";
           </a>
         </div>
         <div class="mt-8 grid grid-cols-2 gap-4">
-          <img class="w-full rounded-lg" src="/us1.png" alt="" />
-          <img class="mt-4 w-full rounded-lg lg:mt-10" src="/us2.png" alt="" />
+          <img class="w-full rounded-lg" src="/daniela/us1.png" alt="" />
+          <img
+            class="mt-4 w-full rounded-lg lg:mt-10"
+            src="/daniela/us2.png"
+            alt=""
+          />
         </div>
       </div>
     </section>
