--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -188,7 +188,7 @@ import Step from "../components/Step.astro";
     <Devider />
 
     <!-- ABOUT -->
-    <section class="bg-white" data-aos="fade-up">
+    <!-- <section class="bg-white" data-aos="fade-up">
       <div
         class="mx-auto max-w-screen-2xl items-center gap-16 px-4 py-8 lg:grid lg:grid-cols-2 lg:px-6 lg:py-16"
       >
@@ -248,7 +248,7 @@ import Step from "../components/Step.astro";
           />
         </div>
       </div>
-    </section>
+    </section> -->
     <!--  -->
   </main>
   <!--  -->
