--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Contact from "../components/Contact.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image" href="/ilanit/logo_notext.png" />
+    <link rel="icon" type="image" href="" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <!-- Fonts -->
