--- a/src/components/gallery.astro
+++ b/src/components/gallery.astro
@@ -1,5 +1,5 @@
 ---
-const PATH = "/daniela/gallery";
+const PATH = "/daniela/gallery/";
 const GALLERYIMAGES = Array.from({ length: 18 }, (_, i) => i + 1);
 ---
 
