--- a/src/components/gallery.astro
+++ b/src/components/gallery.astro
@@ -1,5 +1,6 @@
 ---
 const PATH = "/daniela/gallery/";
+const TEST = Astro.glob("/daniela/gallery/*.jpg");
 const GALLERYIMAGES = Array.from({ length: 18 }, (_, i) => i + 1);
 ---
 
