--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -233,10 +233,10 @@ import Step from "../components/Step.astro";
           </div>
           <a
             data-ripple-light="true"
-            href="/daniela/about"
+            href="#contact"
             class="order-4 mx-auto mt-3 block w-fit rounded-md bg-primary px-5 py-3 tracking-wider text-text_color transition-all hover:scale-105"
           >
-            קרא עוד
+            קבע שיחת הכרות
           </a>
         </div>
         <div class="mt-8 grid grid-cols-2 gap-4">
