--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -37,7 +37,7 @@
       name="מדינה"
       id="country"
       class="block w-full rounded-full border border-gray-300 bg-gray-50 p-2.5 text-base text-gray-900 shadow-sm"
-      placeholder="יפן"
+      placeholder="לאן נוסעים?"
     />
     <textarea
       id="message"
