--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,13 +3,13 @@
 >
   <div class="container mx-auto flex flex-wrap items-center justify-between">
     <a href="#" class="flex items-center">
-      <!-- <img
-        src="/peleg/logo.png"
-        class="my-auto ml-3 h-6 w-6 object-cover sm:h-10 sm:w-10"
+      <img
+        src="/daniela/logo.png"
+        class="my-auto ml-3 h-8 w-8 object-cover sm:h-10 sm:w-10"
         alt=""
-      /> -->
+      />
       <span
-        class="self-center whitespace-nowrap font-heebo text-2xl font-black md:text-4xl"
+        class="self-center whitespace-nowrap font-heebo text-2xl font-black uppercase md:text-4xl"
         >The Dream Tour</span
       >
     </a>
