--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,13 +17,28 @@ import Step from "../components/Step.astro";
           <div class="grid items-center gap-12 lg:grid-cols-2">
             <div class="mt-12 lg:mt-0">
               <h1
-                class="mb-12 font-heebo text-5xl tracking-tight md:text-6xl xl:text-7xl"
+                class="mb-6 font-heebo text-5xl tracking-tight md:text-6xl xl:text-7xl"
               >
                 מתכננים לכם <br /><span class="font-bold text-primary"
-                  >את הטיול המושלם</span
+                  >את טיול החלומות</span
                 >
               </h1>
-
+              <div
+                class="mb-6 w-full space-x-2 space-y-3 space-x-reverse text-[3em]"
+              >
+                <a href="https://www.facebook.com/hodayatravel" role="button">
+                  <!-- Facebook -->
+                  <i class="fa-brands fa-facebook text-blue-500"></i>
+                </a>
+                <a
+                  href="mailto:LeTourDeReve@gmail.com"
+                  class="w-fit"
+                  role="button"
+                >
+                  <!-- gmail -->
+                  <img src="/daniela/gmail.svg" class="inline-block" />
+                </a>
+              </div>
               <a
                 class="inline-block rounded bg-primary px-7 py-3 text-base font-semibold uppercase leading-snug text-white shadow-md transition duration-150 ease-in-out hover:bg-dark_primary hover:shadow-lg focus:ring-0 active:bg-green-800 active:shadow-lg"
                 href="#contact  "
@@ -32,7 +47,7 @@ import Step from "../components/Step.astro";
             </div>
             <div class="mb-12 lg:mb-0">
               <img
-                src="https://images.unsplash.com/photo-1532339142463-fd0a8979791a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                src="/daniela/intro.jpg"
                 class="w-full rounded-lg shadow-lg"
                 alt=""
               />
@@ -89,103 +104,6 @@ import Step from "../components/Step.astro";
       </div>
     </section>
     <!--  -->
-
-    <Devider />
-
-    <section class="bg-white" data-aos="fade">
-      <div
-        class="mx-auto max-w-screen-xl items-center gap-16 px-4 py-8 lg:grid lg:grid-cols-2 lg:px-6 lg:py-16"
-      >
-        <div class="font-varela font-light text-gray-500 sm:text-lg">
-          <h2
-            class="mb-4 font-heebo text-4xl font-extrabold tracking-tight text-gray-900"
-          >
-            טיול שמתאים <span class="text-dark_primary underline">לכם</span>
-          </h2>
-          <p class="mb-4">
-            מכרטיסי טיסה, ועד ליעדים עוצרי הנשימה, אני מתכננת את הטיול המושלם
-            עבורכם. בין אם אתם מחפשים מוזאונים, טבע, או פשוט לראות את העיר, אני
-            אבנה טיול שיתאים לכם כדי לוודא שהחוויה תהיה בלתי נשכחת
-          </p>
-        </div>
-        <div class="mt-8 grid grid-cols-2 gap-4">
-          <img
-            class="animate__bounce w-full rounded-lg"
-            data-wow-duration="5s"
-            src="https://images.unsplash.com/photo-1516738901171-8eb4fc13bd20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80&ar=9:12"
-            alt="office content 1"
-          />
-          <img
-            class="mt-4 w-full rounded-lg lg:mt-10"
-            src="https://images.unsplash.com/photo-1571249692357-fd1418f95042?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80&ar=9:12"
-            alt="office content 2"
-          />
-        </div>
-      </div>
-    </section>
-
-    <Devider />
-
-    <!-- TESTIMONIALS -->
-    <script
-      src="https://static.elfsight.com/platform/platform.js"
-      data-use-service-core
-      defer
-    ></script>
-    <!--  -->
-
-    <div
-      class="elfsight-app-95a740b8-31bf-4603-9a07-65d7727d05fa"
-      data-aos="fade-up"
-    >
-    </div>
-    <!--  -->
-    <Devider />
-    <!-- SERVICES -->
-    <Features />
-    <!--  -->
-    <Devider />
-
-    <!-- PROCESS -->
-    <section class="overflow-x-hidden bg-home">
-      <div class="mx-auto flex max-w-screen-lg flex-col p-6">
-        <h2 class="py-4 text-center font-heebo text-6xl font-bold xl:text-8xl">
-          אז... איך זה עובד?
-        </h2>
-        <ol class="relative border-r">
-          <Step icon="fas fa-phone" title="שיחת פגישה" fadeDir="right">
-            נדבר על התכנונים לטיול. בזמן השיחה, אני אשאל אותכם לגבי מה אתם
-            מעדיפים והציפיות בזמן הטיול, כולל תקציב, פעילויות מועדפות והאורך
-            הטיול. זה יעזור לי ליצור תוכנית מותאמת לכם שמתאים לצרכים והציפיות
-            שלכם
-          </Step>
-          <Step icon="fas fa-map-signs" title="תכנון הטיול" fadeDir="left">
-            אחרי שאבין את העדיפויות שלכם, אני יתחיל את החיפוש שלי כדי לתכנן לכם
-            את הטיול. אני אחפש מקומות לינה, טיסות, פעילויות, ואטרקציות שמתאימים
-            לעדיפות והתקציב שלכם. המטרה שלי הוא ליצור מסלול שכולל את כל המקומות
-            שבהם תרצו לבקר ושמתאים לציר הזמן שלכם.
-          </Step>
-          <Step icon="fas fa-tv" title="הצגת הטיול" fadeDir="right">
-            לאחר שאסיים את תכנית הטיול, אציג אותה בפניכם לבדיקתכם. נדבר על כל
-            שינוי שתרצו לבצע, כמו התאמת מסלול הטיול, החלפת מלונות או החלפת
-            פעילויות. נעבור מספר תיקונים עד שתהיו מרוצים לחלוטין מהטיול.
-          </Step>
-          <Step icon="fas fa-map" title="סיפוק מסלול" fadeDir="left">
-            לאחר סיום תוכנית הטיול, אספק לכם מסלול מפורט הכולל את כל המידע
-            הדרוש, כמו לוחות זמנים של טיסות, הזמנות לבתי מלון והזמנת פעילויות.
-            ככה תדעו בדיוק למה לצפות ומתי, ותוכלו להביט למסלול לאורך כל הטיול
-            שלכם כדי להישאר מאורגנים.
-          </Step>
-          <Step icon="far  fa-laugh-beam" title="תמיכה רציפה" fadeDir="right">
-            לבסוף, אני אהיה זמינה עבורכם לאורך כל הטיול למקרה שיש לכם שאלות או
-            חששות. אני אהיה שם כדי לספק סיוע והכוונה בכל פעם שתזדקקו לכך, כדי
-            להבטיח שהטיול שלכם יעבור בצורה חלקה ככל האפשר.
-          </Step>
-        </ol>
-      </div>
-    </section>
-
-    <Devider />
 
     <!-- ABOUT -->
     <section class="bg-white" data-aos="fade-up">
@@ -250,6 +168,102 @@ import Step from "../components/Step.astro";
       </div>
     </section>
     <!--  -->
+
+    <Devider />
+
+    <section class="bg-white" data-aos="fade">
+      <div
+        class="mx-auto max-w-screen-xl items-center gap-16 px-4 py-8 lg:grid lg:grid-cols-2 lg:px-6 lg:py-16"
+      >
+        <div class="font-varela font-light text-gray-500 sm:text-lg">
+          <h2
+            class="mb-4 font-heebo text-4xl font-extrabold tracking-tight text-gray-900"
+          >
+            תכנון חופשה הוא אחד הדברים הכי מרגשים שאפשר לעשות!
+          </h2>
+          <p class="mb-4">
+            אבל זה גם יכול לקחת הרבה זמן ולהיות תהליך מבלבל ומורט עצבים. מתוך
+            הניסיון שלי אני יכולה להציע לכם חווית תכנון חופשה קלה וללא מתח, לכם
+            כל מה שנותר הוא לבדוק אם הדרכון בתוקף ולארוז מזוודה (לבד...)
+          </p>
+        </div>
+        <div class="mt-8 grid grid-cols-2 gap-4">
+          <img
+            class="animate__bounce w-full rounded-lg"
+            data-wow-duration="5s"
+            src="https://images.unsplash.com/photo-1516738901171-8eb4fc13bd20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80&ar=9:12"
+            alt="office content 1"
+          />
+          <img
+            class="mt-4 w-full rounded-lg lg:mt-10"
+            src="https://images.unsplash.com/photo-1571249692357-fd1418f95042?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80&ar=9:12"
+            alt="office content 2"
+          />
+        </div>
+      </div>
+    </section>
+
+    <Devider />
+
+    <!-- TESTIMONIALS -->
+    <script
+      src="https://static.elfsight.com/platform/platform.js"
+      data-use-service-core
+      defer
+    ></script>
+    <!--  -->
+
+    <div
+      class="elfsight-app-95a740b8-31bf-4603-9a07-65d7727d05fa"
+      data-aos="fade-up"
+    >
+    </div>
+    <!--  -->
+    <Devider />
+    <!-- SERVICES -->
+    <Features />
+    <!--  -->
+    <Devider />
+
+    <!-- PROCESS -->
+    <section class="overflow-x-hidden bg-home">
+      <div class="mx-auto flex max-w-screen-2xl flex-col p-6">
+        <h2 class="mt-4 text-center font-heebo text-6xl font-bold xl:text-8xl">
+          איך יוצאים לטיול מהחלומות?
+        </h2>
+        <ol
+          class="relative mx-auto mt-16 max-w-screen-lg border-r border-gray-500"
+        >
+          <Step icon="fas fa-phone" title="פגישת היכרות בזום" fadeDir="right">
+            נאפיין את הצרכים האישיים ונכיר את ההעדפות הטיול שלכם
+          </Step>
+          <Step icon="fas fa-map-signs" title="תכנון הטיול" fadeDir="left">
+            אחרי שאבין את העדיפויות שלכם, אני אתחיל את החיפוש שלי כדי לתכנן לכם
+            את הטיול. אני אחפש מקומות לינה, טיסות, פעילויות, ואטרקציות שמתאימים
+            לעדיפות והתקציב שלכם. המטרה שלי היא ליצור מסלול שכולל את כל המקומות
+            שבהם תרצו לבקר ושמתאים לציר הזמן שלכם.
+          </Step>
+          <Step icon="fas fa-tv" title="הצגת הטיול" fadeDir="right">
+            לאחר שאסיים את תכנית הטיול, אציג אותה בפניכם לבדיקתכם. נדבר על כל
+            שינוי שתרצו לבצע, כמו התאמת מסלול הטיול, החלפת מלונות או החלפת
+            פעילויות. נעבור מספר תיקונים עד שתהיו מרוצים לחלוטין מהטיול.
+          </Step>
+          <Step icon="fas fa-map" title="תיק נסיעות" fadeDir="left">
+            מקבלים עד הבית את תיק הנסיעות המודפס שלכם שכולל פירוט של כל יום
+            במסלול, מפות, כל הכרטיסים, מידע חשוב וכו', ובנוסף תקבלו גם עותק
+            דיגיטלי הכולל לינקים למפות גוגל / וויז, כרטיסים אלקטרוניים וכל טיפ
+            חשוב שיכול לעזור לכם בדרך
+          </Step>
+          <Step icon="far  fa-laugh-beam" title="תמיכה רציפה" fadeDir="right">
+            לבסוף, אני אהיה זמינה עבורכם לאורך כל הטיול למקרה שיש לכם שאלות או
+            חששות. אני אהיה שם כדי לספק סיוע והכוונה בכל פעם שתזדקקו לכך, כדי
+            להבטיח שהטיול שלכם יעבור בצורה חלקה ככל האפשר.
+          </Step>
+        </ol>
+      </div>
+    </section>
+
+    <Devider />
   </main>
   <!--  -->
 </Layout>
