made FB link to FB

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Step from "../components/Step.astro";
               <div
                 class="mb-6 w-full space-x-2 space-y-3 space-x-reverse text-[3em]"
               >
-                <a href="https://www.facebook.com/hodayatravel" role="button">
+                <a href="https://www.facebook.com/" role="button">
                   <!-- Facebook -->
                   <i class="fa-brands fa-facebook text-blue-500"></i>
                 </a>
